--- a/Group Project.vcxproj.filters
+++ b/Group Project.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="source.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="trig.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
